# cogs

./: .editorconfig  .gitignore  CMakeLists.txt  Cogs.sln  ContributorLicenseAgreement.md  LICENSE  LICENSE2  Microsoft.VCToolsVersion.14.25.props  README.md  TODO.md  azure-pipelines-gcc-ubuntu.yml  azure-pipelines-windows.yml  cogs.natvis  cogs.nix.natvis  cogs.windows.natvis  common.cmake  win.c_cpp_properties.json  win.cmake-tools-kits.json
apps/: CMakeLists.txt
apps/Template/: CMakeLists.txt  Template.cpp
apps/Template/CMake/: Info.plist.in
apps/Template/MacOS/: main.mm
apps/Template/VS/: Template.manifest  Template.manifest.rc  Template.vcxproj
apps/Template/XCode/Template.xcworkspace/: contents.xcworkspacedata
apps/Template/XCode/Template/Template/: Info.plist
apps/Template/XCode/Template/Template.xcodeproj/: project.pbxproj
apps/Template/XCode/Template/Template.xcodeproj/xcshareddata/xcschemes/: Template.xcscheme
apps/UISample/: UISample.cpp
apps/UISample/CMake/: Info.plist.in
apps/UISample/MacOS/: AppDelegate.h  main.mm
apps/UISample/VS/: UISample.rc  UISample.vcxproj  app.manifest  resource.h
core/env/VS/Windows/: cogs.vcxitems  cogs.vcxitems.filters
core/env/gcc/: cogs  makefile  sources  test.cpp
core/src/cogs/: assert.hpp  assign.hpp  bindable_property.hpp  cogs.hpp  compatible.hpp  core.cpp  debug.hpp  dependency_property.hpp  function.hpp  function_list.hpp  load.hpp  macro_concat.hpp  macro_stringify.hpp  main.h  main.hpp  operators.hpp
core/src/cogs/collections/: abastack.hpp  array_view.hpp  avltree.hpp  backed_vector.hpp  btree.hpp  btree_node.hpp  composite_string.hpp  composite_vector.hpp  container_deque.hpp  container_dlist.hpp  container_queue.hpp  container_skiplist.hpp  container_stack.hpp  dlink.hpp  dlist.hpp  function_list.hpp  map.hpp  multimap.hpp  multiset.hpp  no_aba_stack.hpp  rbtree.hpp  set.hpp  simple_vector.hpp  slink.hpp  slist.hpp  stack.hpp  string.hpp  tlink.hpp  unicode.cpp  unicode.hpp  vector.hpp  vector_view.hpp  weak_rcptr_list.hpp
core/src/cogs/crypto/: adler32.hpp  cipher.hpp  crc.hpp  fletcher.hpp  fnv.hpp  gost.hpp  hash.hpp  hash_int.hpp  haval.hpp  hmac.hpp  joaat.hpp  md2.hpp  md4.hpp  md5.hpp  ripemd.hpp  serial_hash.hpp  sha1.hpp  sha2.hpp  sha3.hpp  snefru.hpp  tiger.hpp  whirlpool.hpp
core/src/cogs/geometry/: alignment.hpp  bounds.hpp  cell.hpp  dimension.hpp  direction.hpp  flow.hpp  margin.hpp  point.hpp  proportion.hpp  range.hpp  size.hpp  sizing_groups.hpp
core/src/cogs/gfx/: canvas.hpp  color.hpp  font.hpp
core/src/cogs/gui/: ansiterm.hpp  background.hpp  binding.hpp  bitmap_pane.hpp  button.hpp  button_box.cpp  button_box.hpp  check_box.hpp  editor.hpp  frame.hpp  grid.hpp  label.hpp  labeled_list.hpp  list.hpp  mouse.hpp  native_container_pane.hpp  pane.hpp  pane_bridge.hpp  pixel_image_pane.hpp  scroll_bar.hpp  scroll_pane.hpp  stack_panel.hpp  subsystem.hpp  table.hpp  text_editor.hpp  window.hpp  wrap_list.hpp
core/src/cogs/io/: auto_fd.hpp  buffer.hpp  composite_buffer.hpp  datasink.hpp  datasource.hpp  datastream.hpp  datastream_protocol.hpp  delegated_datasink.hpp  delegated_filter.hpp  file.hpp  filter.hpp  limiter.hpp  permission.hpp  queue.hpp
core/src/cogs/math/: bits_to_bytes.hpp  bits_to_int.hpp  boolean.hpp  bytes_to_int.hpp  chars.hpp  const_extuadd.hpp  const_extudiv.hpp  const_extumul.hpp  const_gcd.hpp  const_lcm.hpp  const_max_int.hpp  const_min_int.hpp  const_upow.hpp  const_uroot.hpp  datetime.hpp  dynamic_integer.hpp  extudiv.hpp  extumul.hpp  fixed_integer.hpp  fixed_integer_extended.hpp  fixed_integer_extended_const.hpp  fixed_integer_native.hpp  fixed_integer_native_const.hpp  fraction.hpp  int_types.hpp  is_arithmetic.hpp  is_arithmetic_type.hpp  is_const_type.hpp  is_integer_type.hpp  is_integral.hpp  is_negative_value.hpp  is_signed.hpp  is_signed_type.hpp  least_multiple_of.hpp  measure.hpp  measurement_types.hpp  negate_if_signed.hpp  next_exponent_of_two.hpp  next_multiple_of.hpp  prev_exponent_of_two.hpp  (+7 more)
core/src/cogs/mem/: allocator.cpp  allocator.hpp  allocator_base.hpp  allocator_container.hpp  auto_handle.hpp  batch_allocator.hpp  bballoc.hpp  bypass_constructor_permission.hpp  bypass_strict_aliasing.hpp  const_bit_rotate.hpp  const_bit_scan.hpp  const_set_bits.hpp  count_args.hpp  default_allocator.hpp  default_memory_manager.hpp  delayed_construction.hpp  endian.hpp  flag_enum.hpp  freelist.hpp  freelist_allocator.hpp  int_parts.hpp  is_pointer_type.hpp  is_raw_pointer_type.hpp  is_raw_reference_type.hpp  is_rc_pointer_type.hpp  is_rc_reference_type.hpp  is_rc_type.hpp  is_reference_type.hpp  is_same_instance.hpp  is_static_castable.hpp  memory_manager_base.hpp  object.hpp  placement.hpp  placement_header.hpp  ptr.hpp  rc.cpp  rc_container.hpp  rc_container_base.hpp  rc_obj.hpp  rc_obj_base.hpp  (+8 more)
core/src/cogs/parser/: escseq.hpp  regexp.hpp
core/src/cogs/sync/: atomic_alignment.hpp  atomic_compare_exchange.hpp  atomic_exchange.hpp  atomic_load.hpp  atomic_store.hpp  auto_reset_event.hpp  can_atomic.hpp  cleanup_queue.hpp  count_down_condition.hpp  count_down_event.hpp  default_atomic_operators.hpp  defer_guard.hpp  dguard.hpp  dispatch_parallel.hpp  dispatcher.hpp  event.hpp  hazard.hpp  immediate_task.hpp  parallel_for_each.hpp  priority_dispatcher.hpp  priority_queue.hpp  pulse_timer.hpp  quit_dispatcher.hpp  refireable_timer.hpp  resettable_condition.hpp  resettable_event.hpp  resettable_timer.hpp  rwlock.hpp  semaphore.hpp  serial_defer_guard.hpp  serial_dispatcher.hpp  sguard.hpp  single_fire_condition.hpp  single_fire_event.hpp  single_fire_timer.hpp  singleton.hpp  sync.cpp  thread.hpp  (+12 more)
tests/: CMakeLists.txt
tests/scratch/: CMakeLists.txt  scratch.cpp
tests/scratch/CMake/: Info.plist.in
tests/scratch/MacOS/: main.mm
tests/scratch/VS/: resource.h  scratch.manifest.rc  scratch.rc  scratch.vcxproj
tests/scratch/XCode/scratch.xcworkspace/: contents.xcworkspacedata
tests/scratch/XCode/scratch/scratch.xcodeproj/: project.pbxproj
tests/scratch/XCode/scratch/scratch.xcodeproj/xcshareddata/xcschemes/: scratch.xcscheme
(+177 files in other folders)
